--- a/static/styles.css
+++ b/static/styles.css
@@ -316,6 +316,9 @@ h1,
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    margin-bottom: 10px;
+    margin-right: 100px;
+    margin-left: 100px;
 }
 
 .feature-icon {
@@ -354,6 +357,7 @@ h1,
     position: relative;
     max-width: 600px;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .hero-input {
