a few wording and style changes, very minor.

--- a/static/styles.css
+++ b/static/styles.css
@@ -825,6 +825,7 @@ footer {
     transform: translateY(-50%);
     cursor: pointer;
     width: 60px;
+    align-content: center;
 }
 
 .gen-section {
