--- a/templates/about.html
+++ b/templates/about.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>About YouTube Scribe</h1>
+    <h1>About Tube Scribe</h1>
 
     <div class="about-section">
-        <p>Welcome to YouTube Scribe, your essential tool for converting YouTube videos into clear, concise written guides. Whether it's a DIY project, a cooking tutorial, or any instructional video, YouTube Scribe makes following along with step-by-step instructions easier than ever. Just input the video URL, and let our intelligent platform handle the rest.</p>
+        <p>Welcome to Tube Scribe, your essential tool for converting YouTube videos into clear, concise written guides. Whether it's a DIY project, a cooking tutorial, or any instructional video, Tube Scribe makes following along with step-by-step instructions easier than ever. Just input the video URL, and let our intelligent platform handle the rest.</p>
     </div>
 
     <div class="about-section">
-        <p>Backed by cutting-edge technologies like Whisper for accurate transcription and OpenAI for generating comprehensive summaries, YouTube Scribe ensures you receive the most reliable information in a user-friendly format.</p>
+        <p>Backed by cutting-edge technologies like Whisper for accurate transcription and OpenAI for generating comprehensive summaries, Tube Scribe ensures you receive the most reliable information in a user-friendly format.</p>
     </div>
 
     <div class="about-section">
-        <p>Whether you value efficiency or simply prefer reading over watching videos, YouTube Scribe is here to assist. Transform your favorite video content into practical, written instructions that you can reference anytime, anywhere.</p>
+        <p>Whether you value efficiency or simply prefer reading over watching videos, Tube Scribe is here to assist. Transform your favorite video content into practical, written instructions that you can reference anytime, anywhere.</p>
     </div>
 {% endblock %}
 
