--- a/templates/generator.html
+++ b/templates/generator.html
@@ -75,7 +75,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Upgrade to Pro</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="hideUpgradeModal()">
+                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close" onclick="hideUpgradeModal()">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
