--- a/static/styles.css
+++ b/static/styles.css
@@ -118,7 +118,7 @@ body {
 }
 
 .alert-danger {
-    background-color: #ff4d4d;
+    background-color: darkred;
 }
 
 .alert-success {
@@ -788,12 +788,13 @@ footer {
     color: white;
     font-size: 1.2em;
     padding: 10px 20px;
-    border-radius: 10px;
+    border-radius: 30px;
     margin-top: 30px;
 }
 
 .btn-logout:hover {
     background-color: #c82333;
+    color: black;
 }
 
 /* Responsive Adjustments */
