--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,8 @@
         </div>
     </form>
 
+    <p class="mt-3">
+        <a href="{{ url_for('reset_password_request') }}">Forgot your password?</a>
+    </p>
     <p class="mt-3">Don't have an account? <a href="{{ url_for('signup') }}">Sign up for free</a></p>
 {% endblock %}
-
