--- a/templates/landing.html
+++ b/templates/landing.html
@@ -42,7 +42,7 @@
                 <img src="{{ url_for('static', filename='images/task-list.svg') }}" alt="Step-by-Step Guides">
             </div>
             <div class="feature-text">
-                <h3>Step-by-Step Guides</h3>
+                <h3>Simplify the Process</h3>
                 <p>Our technology leverages cutting-edge Artificial Intelligence to output clear, easy-to-read text tutorials - all while staying true to the source material that you choose.</p>
             </div>
         </div>
