--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -23,7 +23,9 @@
             {% endfor %}
         </div>
         
-        <button type="submit" class="btn btn-primary">Update Password</button>
+        <div class="form-group-btn">
+            {{ form.submit(class="btn btn-primary btn-block") }}
+        </div>
     </form>
 </div>
 
@@ -64,12 +66,21 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-        {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-            var flashModal = new bootstrap.Modal(document.getElementById('flashMessageModal'));
-            flashModal.show();
-          {% endif %}
-        {% endwith %}
+        const passwordField = document.querySelector('[name="password"]');
+        const confirmPasswordField = document.querySelector('[name="confirm_password"]');
+
+        // Ensure the input type is always 'password' after losing focus
+        passwordField.addEventListener('blur', function() {
+            if (passwordField.value !== '') {
+                passwordField.setAttribute('type', 'password');
+            }
+        });
+
+        confirmPasswordField.addEventListener('blur', function() {
+            if (confirmPasswordField.value !== '') {
+                confirmPasswordField.setAttribute('type', 'password');
+            }
+        });
     });
 </script>
 {% endblock %}
