--- a/templates/reset_password_request.html
+++ b/templates/reset_password_request.html
@@ -20,6 +20,8 @@
             <p>Enter your email in the box below to receive a password reset link.</p>
             {{ form.email(class="form-control", placeholder="Enter your email", required=True) }}
         </div>
-        <button type="submit" class="btn btn-primary mt-3">{{ form.submit.label.text }}</button>
+        <div class="form-group-btn">
+            {{ form.submit(class="btn btn-primary btn-block") }}
+        </div>
     </form>
 {% endblock %}
