--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+{% set no_container = True %}  <!-- Disable the base container -->
 
 {% block content %}
+<div class="login-container">
     <h2>Log In</h2>
 
     <!-- Flash messages -->
@@ -16,17 +18,20 @@
 
     <form method="POST" action="{{ url_for('login') }}">
         {{ form.hidden_tag() }}
-        <div>
-            {{ form.email.label }}<br>
-            {{ form.email(size=32) }}<br>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {{ form.submit(class="btn btn-primary") }}
+        <div class="form-group">
+            {{ form.email(size=32, class="form-control", placeholder="Email") }}<br>
+        </div>
+        <div class="form-group">
+            {{ form.password(size=32, class="form-control", placeholder="Password") }}<br>
+        </div>
+        <div class="form-group-btn">
+            {{ form.submit(class="btn btn-primary btn-block") }}
         </div>
     </form>
 
-    <p class="mt-3">
-        <a href="{{ url_for('reset_password_request') }}">Forgot your password?</a>
-    </p>
-    <p class="mt-3">Don't have an account? <a href="{{ url_for('signup') }}">Sign up for free</a></p>
+    <hr class="login-divider">
+
+    <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up for free</a></p>
+    <p>Forgot your password? <a href="{{ url_for('reset_password_request') }}">Reset it here</a></p>
+</div>
 {% endblock %}
