--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
+{% set no_container = True %}  <!-- Disable the base container -->
+
 {% block content %}
+
+<div class="login-container">
     <h2>Sign Up</h2>
 
     <!-- Flash messages -->
@@ -15,16 +19,22 @@
 
     <form method="POST">
         {{ form.hidden_tag() }}
-        <div>
-            {{ form.email.label }}<br>
-            {{ form.email(size=32) }}<br>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {{ form.confirm_password.label }}<br>
-            {{ form.confirm_password(size=32) }}<br>
-            {{ form.submit(class="btn btn-primary") }}
+        <div class="form-group">
+            {{ form.email(size=32, class="form-control", placeholder="Email") }}<br>
+        </div>
+        <div class="form-group">
+            {{ form.password(size=32, class="form-control", placeholder="Password") }}<br>
+        </div>
+        <div class="form-group">
+            {{ form.confirm_password(size=32, class="form-control", placeholder="Confirm Password") }}<br>
+        </div>
+        <div class="form-group-btn">
+            {{ form.submit(class="btn btn-primary btn-block") }}
         </div>
     </form>
 
+    <hr class="login-divider">
+
     <p class="mt-3">Already have an account? <a href="{{ url_for('login') }}">Log in here</a></p>
+</div>
 {% endblock %}
