--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -55,11 +55,7 @@
                     {% if current_user.is_authenticated and current_user.plan == 'pro' %}
                         <button class="btn btn-secondary" disabled>Current Plan</button>
                     {% else %}
-                        <!-- Disabled button with "Coming Soon" text -->
-                        <button class="btn btn-secondary" disabled>Coming Soon</button>
-                        <!-- Alternatively, if you prefer to keep the <a> tag structure, you can use:
-                        <a href="#" class="btn btn-primary disabled" tabindex="-1" aria-disabled="true">Coming Soon</a>
-                        -->
+                        <a href="{{ url_for('upgrade_to_pro') }}" class="btn btn-primary">Upgrade to Pro</a>
                     {% endif %}
                 </div>
             </div>
